non_resposnive  landing and join us page

--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,8 @@
     border-radius: 0;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    background-color: #040207;
 }
 
 .full_size {
@@ -20,12 +21,17 @@ div {
 #content {
     width: 100vw;
     height: 100vh;
-    background-color: red;
+    overflow: hidden;
+}
+
+#join_us {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 object {
     width: 100vw;
     height: 100vh;
-    background-color: green;
-    overflow-x: hidden;
+    position: relative;
 }
