--- a/style/landing_banner.css
+++ b/style/landing_banner.css
@@ -3,14 +3,80 @@
     border-radius: 0;
     margin: 0;
     padding: 0;
-    color: red;
+    color: white;
 }
 
 .backgorund_img {
-    width: 100%;
+    width: auto;
     height: 100vh;
+    background-image: url("/assets/backgrounds/dark_purple__frame.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 #test {
     width: 100%;
+}
+
+.inner_landing_page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.banner {
+    position: absolute;
+    align-self: end;
+    margin-right: 6%;
+}
+
+.gun-hee {
+    position: absolute;
+    height: 100vh;
+    z-index: 9999;
+}
+
+.shadow {
+    height: 90vh;
+    margin-top: 4%;
+    margin-left: 2%;
+    z-index: 0;
+}
+
+.logo {
+    height: 25%;
+    width: 19%;
+    position: absolute;
+    margin-top: 4%;
+    margin-left: 10%;
+}
+
+.gun_hee_title {
+    height: 60%;
+    width: 40%;
+    align-self: center;
+    margin-top: 5%;
+    margin-left: 12%;
+    opacity: 30%;
+    z-index: 1;
+}
+
+.title_special {
+    position: absolute;
+    margin-top: 5.5%;
+    margin-left: 13%;
+    opacity: 10%;
+}
+
+.guild_text {
+    position: absolute;
+    color: #301059;
+    align-self: center;
+    margin-left: 29%;
+    margin-top: 31%;
+    font-size: 4rem;
+    opacity: 70%;
+    font-weight: 600;
 }
